fix: id:47081 close icon overlapping with scrollbar

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -80,7 +80,7 @@ $modal-footer-background:                        #fff !default; //add $global-ba
 .close {
   position: absolute;
   top: 10px;
-  right: 10px;
+  right: 20px;
 }
 
 .header {
